# fast-api

./: .pre-commit-config.yaml
basic-apis/: .gitignore  pyproject.toml
